examples/errors/parsing/let_tuple.cn
main : () [impure] =
  let pair = ((3, 4) : (Int * Int));
  let (x, y) = pair;
  let z : Int = x + y;
  ()
